# codex-whatsapp-agent-demo

./: .dockerignore  .gitignore  AGENTS.md  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml  start.sh
.github/workflows/: ci.yml
docs/: PRD.md
sidecar/: package.json
sidecar/src/: index.js  normalizers.js
src/app/: __init__.py  auth_relay.py  codex_client.py  command_parser.py  config.py  main.py  models.py  policy.py  service.py  store.py  system_prompt.py  whatsapp_sidecar.py
tests/: __init__.py  test_auth_relay.py  test_command_parser.py  test_group_scope.py  test_policy.py  test_service_auth_complete.py
